--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <img src="img3.jpg" style="width:100%">
-          <div class="text">Past Progect</div>
+          <div class="text">Past Project</div>
         </div>
+
+        
       
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
