added images and changed the color of arrows/text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="mySlides fade">
           <div class="numbertext">2 / 5</div>
           <img src="img2.jpg" style="width:100%">
-          <div class="text">Past Project Proof</div>
+          <div class="text">Past Project Proof 2</div>
         </div>
       
         <div class="mySlides fade">
