--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <link rel="stylesheet" href="style.css">
     <body>
-        <h1>Welcome! This will be a portfolio about Jaysin</h1>
+        <h1>Welcome! This is a portfolio about Jaysin</h1>
         <p>I'm hosted with Github</p>
     </body>
     <div class="slideshow-container">
@@ -11,7 +11,7 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 5</div>
           <img src="img1.jpg" style="width:100%">
-          <div class="text">Past Project Proof</div>
+          <div class="text">Past Project Proof (Another web page)</div>
         </div>
       
         <div class="mySlides fade">
