added past jobs/projects section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <h1>Welcome! This is a portfolio about Jaysin</h1>
         <p>I'm hosted with Github</p>
     </body>
+    <body>
+      <h1>Past Projects</h2>
+      <p>text</p>
+    </body>
+
     <div class="slideshow-container">
 
         <!-- Full-width images with number and caption text -->
@@ -83,5 +88,11 @@
             dots[slideIndex-1].className += " active";
         }
       </script>
+
+      <body>
+        <h1>Past Jobs</h1>
+        <p>text</p>
+      </body>
+
 
 </html>
