removed jobs section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 5</div>
           <img src="img1.jpg" style="width:100%">
-          <div class="text">Past Project Proof (Another web page)</div>
+          <div class="text">Past Project Proof </div>
         </div>
       
         <div class="mySlides fade">
@@ -88,11 +88,6 @@
             dots[slideIndex-1].className += " active";
         }
       </script>
-
-      <body>
-        <h1>Past Jobs</h1>
-        <p>text</p>
-      </body>
 
 
 </html>
